[tool.poetry]
name = "pydantic-form-model"
version = "0.1.0"
description = ""
authors = ["leibetsederjakob <leibetsederjakob@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
