[tool.poetry]
name = "pydantic-form-model"
version = "0.4.2"
description = ""
authors = ["leibetsederjakob <leibetsederjakob@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
pyhumps = "^3.8.0"


[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.34.2"}
python-multipart = "^0.0.20"
fastapi = "^0.128.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
